--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,9 @@ dependencies {
    compile 'org.slf4j:slf4j-api:1.6.1'
    compile 'org.slf4j:slf4j-log4j12:1.6.1'
    
-   testCompile  'junit:junit:4.10'
+   testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
+   testCompile 'junit:junit:4.10'
+   testCompile 'cglib:cglib:2.2.2'
 }
 task wrapper(type: Wrapper, description: 'generate gradle wrapper') {
    gradleVersion = '1.4'
